[package]
name = "cubus-ghost"
version = "0.1.0"
edition = "2021"
description = "Ghost discovery: emergent connections in holographic containers"

[features]
default = ["avx512"]
avx512 = ["numrus-core/avx512"]
avx2 = ["numrus-core/avx2"]

[dependencies]
numrus-core = { git = "https://github.com/cubus1/numrus", branch = "main", default-features = false }
numrus-nars = { git = "https://github.com/cubus1/numrus", branch = "main" }
numrus-substrate = { git = "https://github.com/cubus1/numrus", branch = "main" }
rand = "0.8"
serde_json = "1"
