[package]
name = "cubus-lance"
version = "0.1.0"
edition = "2021"
description = "Arrow/Lance storage bridge for cubus — zero-copy NumArray ↔ Arrow, CogRecord ↔ Lance dataset"
rust-version = "1.82.0"

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
datafusion = ["dep:datafusion", "dep:tokio", "dep:futures"]
lance = ["dep:lance", "dep:tokio", "dep:futures"]

[dependencies]
numrus-rs = { git = "https://github.com/cubus1/numrus", branch = "main" }
numrus-core = { git = "https://github.com/cubus1/numrus", branch = "main" }
numrus-clam = { git = "https://github.com/cubus1/numrus", branch = "main" }
arrow = { version = "57", optional = true, features = ["ffi"] }
datafusion = { version = "51", optional = true }
lance = { version = "2", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
futures = "0.3"
